# Artificial-Intelligence-and-Machine-Learning

./: .gitattributes  .gitignore  README.md
1-Heuristic-Search-Checkers/: solution.java
2-Logistic-Reasoning-Wumpus/: solution.pl
3-Bayesian-Networks-Modeling/: diabetes_network.xdsl
4-Markov-Decision-Problems/: CMakeLists.txt  README.md  build.sh  data1.txt  data2.txt  data3.txt  main.cpp
4-Markov-Decision-Problems/inc/: CommandLineParser.h  Plotter.h  QLearning.h  ValueIterationAlgorithm.h  World.h
4-Markov-Decision-Problems/src/: CommandLineParser.cpp  Plotter.cpp  QLearning.cpp  ValueIterationAlgorithm.cpp  World.cpp  main.cpp  mainQLearning.cpp  mainValueIteration.cpp
5-Classifier-Machine-Learning/: README.md  create_test_dataset.py  data_processor.py  find_the_best_model.py  main.py  requirements.txt  save_best_model.py  save_the_best_model.py  test_trained_model.py
Heuristic-Search-Checkers/src/: Main.java
Logistic-Reasoning-Wumpus/: solution.pl
